[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "*.py"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame = "^2.5.2"
flake8 = "^7.0.0"
black = "^24.4.2"
pyinstaller = "^6.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
